--- a/jet-master/index.html
+++ b/jet-master/index.html
@@ -2853,17 +2853,32 @@ instagram: www.instagram.com/codacodpe
                                     <!--end::Header-->
                                     <!--begin::Block-->
                                     <div class="p-10 mx-auto">
-
-                                        <div class="d-flex flex-wrap align-items-center">
-                                            <a href="#">
-                                                <div class="border border-primary opacity-50-hover w-200px h-200px d-flex flex-center p-3 me-5 mb-5 bgi-no-repeat bgi-size-contain bgi-position-center" style="background-image:url('/jet-master/assets/media/illustrations/unitedpalms-1/2.png')"></div>
-                                            </a>
-                                            <div class="opacity-50-hover bg-primary text-white w-200px h-200px d-flex flex-center p-3 me-5 mb-5 fw-bold">.opacity-50-hover</div>
-                                            <div class="opacity-50-hover bg-primary text-white w-200px h-200px d-flex flex-center p-3 me-5 mb-5 fw-bold">.opacity-50-hover</div>
-                                            <div class="opacity-50-hover bg-primary text-white w-200px h-200px d-flex flex-center p-3 me-5 mb-5 fw-bold">.opacity-50-hover</div>
-                                            <div class="opacity-50-hover bg-primary text-white w-200px h-200px d-flex flex-center p-3 me-5 mb-5 fw-bold">.opacity-50-hover</div>
+                                        <div class="d-flex flex-wrap justify-content-center">
+                                            <div class="p-3 me-5 mb-5" style="text-align: center;">
+                                                <a href="#">
+                                                    <div class="border border-primary border-3 rounded-3 opacity-50-hover w-200px h-200px d-flex flex-center  bgi-no-repeat bgi-size-contain bgi-position-center" style="background-image:url('/jet-master/assets/media/illustrations/unitedpalms-1/3.png')"></div>
+                                                </a>
+                                                <div class="text-gray-700 fs-5 fw-boldest mt-3">Ingresar solicitud</div>
+                                            </div>
+                                            <div class="p-3 me-5 mb-5" style="text-align: center;">
+                                                <a href="#">
+                                                    <div class="border border-primary border-3 rounded-3 opacity-50-hover w-200px h-200px d-flex flex-center  bgi-no-repeat bgi-size-contain bgi-position-center" style="background-image:url('/jet-master/assets/media/illustrations/unitedpalms-1/2.png')"></div>
+                                                </a>
+                                                <div class="text-gray-700 fs-5 fw-boldest mt-3">Hola</div>
+                                            </div>
+                                            <div class="p-3 me-5 mb-5" style="text-align: center;">
+                                                <a href="#">
+                                                    <div class="border border-primary border-3 rounded-3 opacity-50-hover w-200px h-200px d-flex flex-center  bgi-no-repeat bgi-size-contain bgi-position-center" style="background-image:url('/jet-master/assets/media/illustrations/unitedpalms-1/3.png')"></div>
+                                                </a>
+                                                <div class="text-gray-700 fs-5 fw-boldest mt-3">Hola</div>
+                                            </div>
+                                            <div class="p-3 me-5 mb-5" style="text-align: center;">
+                                                <a href="#">
+                                                    <div class="border border-primary border-3 rounded-3 opacity-50-hover w-200px h-200px d-flex flex-center  bgi-no-repeat bgi-size-contain bgi-position-center" style="background-image:url('/jet-master/assets/media/illustrations/unitedpalms-1/4.png')"></div>
+                                                </a>
+                                                <div class="text-gray-700 fs-5 fw-boldest mt-3">Hola</div>
+                                            </div>
                                         </div>
-
                                     </div>
                                     <!--end::Block-->
                                 </div>
