--- a/jet-master/index.html
+++ b/jet-master/index.html
@@ -2845,8 +2845,8 @@ instagram: www.instagram.com/codacodpe
                                     <div class="card-header border-0 pt-5">
                                         <!--begin::Card title-->
                                         <h3 class="card-title align-items-start flex-column">
-                                            <span class="card-label fw-boldest fs-3 text-dark">Authors Overview</span>
-                                            <span class="text-gray-400 mt-2 fw-bold fs-6">22M total income</span>
+                                            <span class="card-label fw-boldest fs-3 text-dark">Menú de aplicaciones</span>
+                                            <span class="text-gray-400 mt-2 fw-bold fs-6">Elija alguna acción</span>
                                         </h3>
                                         <!--end::Card title-->
                                     </div>
@@ -2856,27 +2856,27 @@ instagram: www.instagram.com/codacodpe
                                         <div class="d-flex flex-wrap justify-content-center">
                                             <div class="p-3 me-5 mb-5" style="text-align: center;">
                                                 <a href="#">
-                                                    <div class="border border-primary border-3 rounded-3 opacity-50-hover w-200px h-200px d-flex flex-center  bgi-no-repeat bgi-size-contain bgi-position-center" style="background-image:url('/jet-master/assets/media/illustrations/unitedpalms-1/3.png')"></div>
-                                                </a>
-                                                <div class="text-gray-700 fs-5 fw-boldest mt-3">Ingresar solicitud</div>
-                                            </div>
-                                            <div class="p-3 me-5 mb-5" style="text-align: center;">
-                                                <a href="#">
-                                                    <div class="border border-primary border-3 rounded-3 opacity-50-hover w-200px h-200px d-flex flex-center  bgi-no-repeat bgi-size-contain bgi-position-center" style="background-image:url('/jet-master/assets/media/illustrations/unitedpalms-1/2.png')"></div>
-                                                </a>
-                                                <div class="text-gray-700 fs-5 fw-boldest mt-3">Hola</div>
-                                            </div>
-                                            <div class="p-3 me-5 mb-5" style="text-align: center;">
-                                                <a href="#">
-                                                    <div class="border border-primary border-3 rounded-3 opacity-50-hover w-200px h-200px d-flex flex-center  bgi-no-repeat bgi-size-contain bgi-position-center" style="background-image:url('/jet-master/assets/media/illustrations/unitedpalms-1/3.png')"></div>
-                                                </a>
-                                                <div class="text-gray-700 fs-5 fw-boldest mt-3">Hola</div>
-                                            </div>
-                                            <div class="p-3 me-5 mb-5" style="text-align: center;">
-                                                <a href="#">
                                                     <div class="border border-primary border-3 rounded-3 opacity-50-hover w-200px h-200px d-flex flex-center  bgi-no-repeat bgi-size-contain bgi-position-center" style="background-image:url('/jet-master/assets/media/illustrations/unitedpalms-1/4.png')"></div>
                                                 </a>
-                                                <div class="text-gray-700 fs-5 fw-boldest mt-3">Hola</div>
+                                                <div class="text-gray-700 fs-5 fw-boldest mt-3">Nueva solicitud</div>
+                                            </div>
+                                            <div class="p-3 me-5 mb-5" style="text-align: center;">
+                                                <a href="#">
+                                                    <div class="border border-primary border-3 rounded-3 opacity-50-hover w-200px h-200px d-flex flex-center  bgi-no-repeat bgi-size-contain bgi-position-center" style="background-image:url('/jet-master/assets/media/illustrations/unitedpalms-1/3.png')"></div>
+                                                </a>
+                                                <div class="text-gray-700 fs-5 fw-boldest mt-3">Historial</div>
+                                            </div>
+                                            <div class="p-3 me-5 mb-5" style="text-align: center;">
+                                                <a href="#">
+                                                    <div class="border border-primary border-3 rounded-3 opacity-50-hover w-200px h-200px d-flex flex-center  bgi-no-repeat bgi-size-contain bgi-position-center" style="background-image:url('/jet-master/assets/media/illustrations/unitedpalms-1/11.png')"></div>
+                                                </a>
+                                                <div class="text-gray-700 fs-5 fw-boldest mt-3">Solicitudes extras</div>
+                                            </div>
+                                            <div class="p-3 me-5 mb-5" style="text-align: center;">
+                                                <a href="#">
+                                                    <div class="border border-primary border-3 rounded-3 opacity-50-hover w-200px h-200px d-flex flex-center  bgi-no-repeat bgi-size-contain bgi-position-center" style="background-image:url('/jet-master/assets/media/illustrations/unitedpalms-1/9.png')"></div>
+                                                </a>
+                                                <div class="text-gray-700 fs-5 fw-boldest mt-3">Ajustes</div>
                                             </div>
                                         </div>
                                     </div>
