--- a/jet-master/index.html
+++ b/jet-master/index.html
@@ -2853,15 +2853,23 @@ instagram: www.instagram.com/codacodpe
                                     <!--end::Header-->
                                     <!--begin::Block-->
                                     <div class="p-10 mx-auto">
-
                                         <div class="d-flex flex-wrap align-items-center">
-                                            <a href="#">
-                                                <div class="opacity-50-hover w-200px h-200px d-flex flex-center p-3 me-5 mb-5 bgi-no-repeat bgi-size-contain bgi-position-center" style="background-image:url('/jet-master/assets/media/illustrations/unitedpalms-1/2.png')"></div>
+                                            <a class="me-10 mb-10" href="#">
+                                                <div class="border border-primary border-2 rounded-3">
+                                                    <div class="opacity-50-hover w-250px h-250px d-flex flex-center bgi-no-repeat bgi-size-contain bgi-position-center" style="background-image:url('/jet-master/assets/media/illustrations/unitedpalms-1/1.png')"></div>
+                                                    <div class="mx-auto"><a>hola</a></div>
+                                                </div>
                                             </a>
-                                            <div class="opacity-50-hover bg-primary text-white w-200px h-200px d-flex flex-center p-3 me-5 mb-5 fw-bold">.opacity-50-hover</div>
-                                            <div class="opacity-50-hover bg-primary text-white w-200px h-200px d-flex flex-center p-3 me-5 mb-5 fw-bold">.opacity-50-hover</div>
-                                            <div class="opacity-50-hover bg-primary text-white w-200px h-200px d-flex flex-center p-3 me-5 mb-5 fw-bold">.opacity-50-hover</div>
-                                            <div class="opacity-50-hover bg-primary text-white w-200px h-200px d-flex flex-center p-3 me-5 mb-5 fw-bold">.opacity-50-hover</div>
+                                            <a href="#">
+                                                <div class="border border-primary border-2 rounded-3 opacity-50-hover w-200px h-200px d-flex flex-center p-3 me-10 mb-10 bgi-no-repeat bgi-size-contain bgi-position-center" style="background-image:url('/jet-master/assets/media/illustrations/unitedpalms-1/2.png')"></div>
+                                            </a>
+                                            <a href="#">
+                                                <div class="border border-primary border-2 rounded-3 opacity-50-hover w-200px h-200px d-flex flex-center p-3 me-10 mb-10 bgi-no-repeat bgi-size-contain bgi-position-center" style="background-image:url('/jet-master/assets/media/illustrations/unitedpalms-1/3.png')"></div>
+                                            </a>
+                                            <a href="#">
+                                                <div class="border border-primary border-2 rounded-3 opacity-50-hover w-200px h-200px d-flex flex-center p-3 me-10 mb-10 bgi-no-repeat bgi-size-contain bgi-position-center" style="background-image:url('/jet-master/assets/media/illustrations/unitedpalms-1/4.png')"></div>
+                                            </a>
+
                                         </div>
 
                                     </div>
